@@ -32,7 +32,7 @@ public class StringCompilerAndRunner {
      * $2 : libpath
      * $3 : classname
      */
-    private static final String CALL_JAVAC_MAIN = "javac -cp %1$s/bin/"+ File.pathSeparator + "%2$s -d %1$s/bin/ %1$s/src/%3$s.java";
+    private static final String CALL_JAVAC_MAIN = "javac -cp %1$s/bin/"+ File.pathSeparator + "%2$s -d %1$s/bin/ %1$s/src/%3$s.java -Xlint:unchecked";
 
     /**
      * Pattern d'exécution
@@ -40,10 +40,11 @@ public class StringCompilerAndRunner {
      * $2 : libpath
      * $3 : classname
      */
-    private static final String CALL_JAVA_MAIN = "java -cp %1$s/bin/"+ File.pathSeparator + "%2$s %3$s";
+    private static final String CALL_JAVA_MAIN = "java -Djava.security.manager -Djava.security.policy=="+ Play.application().configuration().getString("security.manager.path")
+                                                +" -cp %1$s/bin/"+ File.pathSeparator + "%2$s %3$s";
 
     // Regex permettant de trouver le nom de la classe possédant la méthode main (dans le 1er group)
-    private static final String PATTERN_MAIN = "public class (\\w*)\\s\\{[\\n|\\s]*\\s*public static void main";
+    private static final String PATTERN_MAIN = "public class (\\w*)";
 
     public CompilationAndRunResult compileAndRun(String code) throws IOException {
         System.out.println("Debut compileAndRun");
@@ -57,10 +58,7 @@ public class StringCompilerAndRunner {
         createFilesBeforeCompile(code, className, tempDirectory);
         CompilationAndRunResult compilationAndRunResult = new CompilationAndRunResult();
         compileCode(compilationAndRunResult, className, libPath, tempDirectory);
-
-        if(canRunCode(compilationAndRunResult)) {
-            runCode(compilationAndRunResult, className, libPath, tempDirectory);
-        }
+        runCode(compilationAndRunResult, className, libPath, tempDirectory);
 
         deleteTmpFolder(tempDirectory);
 
@@ -83,10 +81,6 @@ public class StringCompilerAndRunner {
         }
 
         return Optional.empty();
-    }
-
-    private boolean canRunCode(CompilationAndRunResult compilationAndRunResult) {
-        return compilationAndRunResult.getErrors().isEmpty();
     }
 
     private void compileCode(CompilationAndRunResult compilationAndRunResult, String className, String libpath, Path tempDirectory) throws IOException {
@@ -124,6 +118,7 @@ public class StringCompilerAndRunner {
         Files.createDirectories(path);
         return path;
     }
+
 
 
 }
